src/main/resources/Krakatau-master/tests/assembler/bad/rawalias.j
.class public whocares
.super java/lang/Object

.const [1] = [2]
.end class
